--- a/src/assets/sass/generic/_critical.scss
+++ b/src/assets/sass/generic/_critical.scss
@@ -6,4 +6,4 @@
    Imports
    ========================================================================== */
 
-@import "fonts";
+//@import "fonts";
