--- a/src/assets/sass/generic/_fonts.scss
+++ b/src/assets/sass/generic/_fonts.scss
@@ -6,10 +6,10 @@
  * Open Sans - Regular/Italic and Bold/Italic
  */
 
-@font-face {
+ @font-face {
   font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-Bold.woff2') format('woff2'),
-       url('../../fonts/OpenSans-Bold.woff') format('woff');
+  src: url(~@../../fonts/OpenSans-Bold.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-Bold.woff) format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -17,8 +17,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-BoldItalic.woff2') format('woff2'),
-       url('../../fonts/OpenSans-BoldItalic.woff') format('woff');
+  src: url(~@../../fonts/OpenSans-BoldItalic.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-BoldItalic.woff) format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -26,8 +26,26 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-Regular.woff2') format('woff2'),
-       url('../../fonts/OpenSans-Regular.woff') format('woff');
+  src: url(~@../../fonts/OpenSans-ExtraBold.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-ExtraBold.woff) format('woff');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url(~@../../fonts/OpenSans-SemiBold.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-SemiBold.woff) format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url(~@../../fonts/OpenSans-Regular.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-Regular.woff) format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -35,8 +53,8 @@
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-Italic.woff2') format('woff2'),
-       url('../../fonts/OpenSans-Italic.woff') format('woff');
+  src: url(~@../../fonts/OpenSans-Italic.woff2) format('woff2'),
+       url(~@../../fonts/OpenSans-Italic.woff) format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
