--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -1,3 +1,176 @@
 /**
  * components/_button.scss
  */
+ 
+.button {
+
+  &.-link, &.-action {
+    font-size: 1rem;
+    line-height: 1em;
+    font-weight: 600;
+    letter-spacing: .01em;
+    text-transform: none;
+    font-family: var(--fontPrimary);
+    overflow: hidden;
+    white-space: nowrap;
+    outline: 0; 
+    border: 0;
+    margin: 0;
+    transition: all .45s ease;
+    cursor: pointer;
+
+    @media (min-width: 992px) {
+      font-size: .666rem;
+      border-radius: .1666rem;
+      height: 2rem;
+    }
+  }
+
+  &.-link {
+    padding: 5px 0;
+    background: none;
+    text-decoration: underline;
+
+    &:not(a) {
+      text-decoration: none;
+      border-radius: .25rem;
+      display: inline-flex;
+      flex-shrink: 0;
+      vertical-align: top; 
+      align-items: center;
+      justify-content: center;
+      min-width: 100px;
+      max-width: 100%;
+      height: 3rem;
+      padding: 0 1rem;
+
+      @media (min-width: 992px) {
+        border-radius: .1666rem;
+        height: 2rem;
+      }
+    }
+
+    .icon {
+      width: 14px;
+      height: 14px;
+
+      &.-right {
+        margin-left: 16px;
+      }
+    }
+
+    &.-quaternary {
+      color: var(--colorQuaternary);
+  
+      &:hover {
+        color: var(--colorSecondary);
+      }
+
+      &:not(a) {
+
+        &:hover {
+          background: rgba(0,0,0,.05);
+        }
+      }
+    }
+  }
+
+  &.-action {
+    text-decoration: none;
+    box-shadow: 0px 4px 6px rgba(61, 219, 147, .15);
+    border-radius: .25rem;
+    display: inline-flex;
+    flex-shrink: 0;
+    vertical-align: top; 
+    align-items: center;
+    justify-content: center;
+    min-width: 100px;
+    max-width: 100%;
+    height: 3rem;
+    padding: 0 1rem;
+    transition: all .45s ease;
+    cursor: pointer;
+
+    @media (min-width: 992px) {
+      border-radius: .1666rem;
+      height: 2rem;
+    }
+
+    &.-primary {
+      color: var(--colorLight);
+      background: var(--colorPrimary);
+  
+      &:hover {
+        background: var(--colorSecondary);
+      }
+    }
+  
+    &.-clean {
+      color: var(--colorTertiary);
+      background: none;
+  
+      &:hover {
+        color: var(--colorLight);
+        background: var(--colorSecondary);
+  
+        .icon {
+          filter: brightness(0) invert(1);
+        }
+      }
+  
+      &.-outline {
+        box-shadow: 0px 4px 6px rgba(64, 69, 66, .1);
+  
+        &:hover {
+          background: var(--colorTertiary);
+        }
+      }
+    }
+  
+    .icon {
+      width: 14px;
+      height: 100%;
+      filter: none;
+      transition: all .45s ease;
+  
+      &.-left {
+        margin-right: 16px;
+      }
+    }
+  }
+
+  &.-close {
+    line-height: normal;
+    text-transform: none;
+    text-decoration: none;
+    overflow: hidden;
+    outline: 0; 
+    border: 0;
+    margin: 0;
+    padding: 0;
+    height: 3rem;
+    width: 3rem;
+    background: none;
+    display: inline-flex;
+    flex-shrink: 0;
+    vertical-align: top; 
+    align-items: center;
+    justify-content: center;
+    transition: all .45s ease;
+    cursor: pointer;
+
+    @media (min-width: 992px) {
+      height: 2rem;
+      width: 2rem;
+    }
+
+    &:hover {
+      background: rgba(0,0,0,.05);
+    }
+
+    .icon {
+      width: 12px;
+      height: 12px;
+    }
+  }
+}
