--- a/src/assets/sass/components/_typography.scss
+++ b/src/assets/sass/components/_typography.scss
@@ -63,12 +63,21 @@ p {
     span {
       display: inline-block;
       position: relative;
-      z-index: 2;
+      z-index: 1;
+
+      span {
+        position: relative;
+        z-index: 3;
+
+        &:before {
+          display: none;
+        }
+      }
 
       &:before {
         position: absolute;
         z-index: 1;
-        bottom: 18%;
+        bottom: 13%;
         left: 0;
         right: 0;
         height: 6px;
@@ -85,10 +94,10 @@ p {
 
   &.-wide {
     font-size: 2.33rem;
-    line-height: 2.5rem;
+    line-height: 3.2rem;
   }
 
-  &.-large {
+  &.-larger {
     font-size: 1.5rem;
     line-height: 1.666rem;
   }
@@ -101,6 +110,10 @@ p {
   &.-smaller {
     font-size: .833rem;
     line-height: 1rem;
+  }
+
+  &.-condensed {
+    line-height: 1.666rem;
   }
 }
 
